--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            /* background-size: cover; */
-            background-position: center;
+            background-size: auto; /* This will cover the entire page but maintain the aspect ratio */
+            background-position: center; /* This centers the background image */
+            background-repeat: no-repeat; /* This prevents the image from repeating */
         }
         .message {
             background-color: rgba(255, 255, 255, 0.8);
@@ -27,12 +28,6 @@
             width: 100%;
             margin: 0 20px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .image {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
         }
     </style>
 </head>
@@ -54,7 +49,6 @@
     const images = [
         'img1.png',
         'img2.png',
-        'img3.png',
         'img4.png',
         'img5.png',
         'img6.png',
