--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <div class="message">
     <h1 class="text-4xl font-bold mb-4">Congratulations!</h1>
-    <p class="text-lg mb-4">Dear Bruno,</p>
+    <p class="text-lg mb-4">Dear Brunonas,</p>
     <p class="text-md mb-4">I'm thrilled to congratulate you with this special gift:</p>
     <p class="text-md mb-4">A paraglider flight in Mürren!
     <p class="text-md mb-4">Here's to soaring high and enjoying the breathtaking views.</p>
