--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            background-size: auto; /* This will cover the entire page but maintain the aspect ratio */
+            background-size: cover; /* This will cover the entire page but maintain the aspect ratio */
             background-position: center; /* This centers the background image */
             background-repeat: no-repeat; /* This prevents the image from repeating */
         }
